<resources>
        <string name="app_name">Nhom8</string>
        <string name="forgot_pass">Forgot Password</string>
        <string name="login">Login</string>
        <string name="pass_word">Password</string>
        <string name="user_name">Username</string>
        <string name="sign_up">Sign up for free</string>
        <string name="ghi_nho">Ghi nhớ mật khẩu</string>
        <string name="user">User</string>
        <string name="dk">DANG KY THANH VIEN</string>
        <string name="success">Thue Thanh Cong</string>
        <string name="tiep_tuc">tiep tuc thue</string>
        <string name="hint_email">Email</string>
        <string name="hint_password">Password</string>
        <string name="hint_name">Fullname</string>
        <string name="btn_login">LOGIN</string>
        <string name="btn_register">REGISTER</string>
        <string name="btn_link_to_register">Not a member? Sign up now.</string>
        <string name="btn_link_to_login">Already registred! Login Me.</string>
        <string name="welcome">Welcome</string>
        <string name="btn_logout">LOGOUT</string>
        <string name="name">Fullname</string>
        <string name="register">Form Dang Ky</string>
        <string name="ten_sp">Ten San Pham</string>
        <string name="mo_ta">mo ta san pham</string>
        <string name="chi_tiet_sp">Chi Tiet San Pham</string>
        <string name="ngay_tra">Ngay tra</string>
        <string name="dia_chi">Dia chi</string>
        <string name="thue">Thue</string>
</resources>
