<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background= "@color/login_background">

        <LinearLayout
            android:layout_above="@id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:src="@drawable/icon"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp">
            <EditText
                android:id="@+id/username"
                android:hint="@string/user_name"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="10dp"/>
            <EditText
                android:id="@+id/password"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ghi_nho"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/bntlogin"
                android:background="@color/bnt_login"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textSize="28sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textAllCaps="false"/>
            <TextView
                android:textColor="@color/white"
                android:text="@string/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>